Hide overflow to prevent flash of scrollbar in Safari.

--- a/app/assets/stylesheets/_site.scss
+++ b/app/assets/stylesheets/_site.scss
@@ -1662,6 +1662,7 @@ li.selected > a .favicon-wrap {
 					overflow: auto;
 					margin: auto;
 					position: absolute;
+					overflow: hidden;
 					top: 0;
 					left: 0;
 					bottom: 0;
